@@ -767,6 +767,26 @@ void syscall_do()
 	}
 
 
+	/* 15 */
+	case syscall_code_chmod:
+	{
+		char filename[STRSIZE], fullpath[STRSIZE];
+		uint32_t pfilename, mode;
+		int len;
+
+		pfilename = isa_regs->ebx;
+		mode = isa_regs->ecx;
+		len = mem_read_string(isa_mem, pfilename, STRSIZE, filename);
+		if (len >= STRSIZE)
+			fatal("syscall chmod: maximum string size exceeded");
+		ld_get_full_path(isa_ctx, filename, fullpath, STRSIZE);
+		syscall_debug("  pfilename=0x%x, mode=0x%x\n", pfilename, mode);
+		syscall_debug("  filename='%s', fullpath='%s'\n", filename, fullpath);
+		RETVAL(chmod(fullpath, mode));
+		break;
+	}
+
+
 	/* 19 */
 	case syscall_code_lseek:
 	{
